WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
16421
REGRESSION(
r28669
): Page scrolls down when you hit space key in text area
https://bugs.webkit.org/show_bug.cgi?id=16421
Summary
REGRESSION(r28669): Page scrolls down when you hit space key in text area
Louise
Reported
2007-12-13 10:22:17 PST
When you are focused in text input area, hitting space key makes the page scroll down. Steps to reproduce: 1) Move the focus to text input area (ex. the comment input area of this page) 2) hit space key Actual Result: a space is entered in the text area but also the page is scrolled down. Expected Result: a space is entered in the text area without scrolling. tested with Safari 3.0.4 (523.12.9) webkit
r28669
, Windows XP SP2 -Doesn't occur on Safari 3.0.4 (523.12.9) webkit
r28586
, Windows XP SP2 (previous nightly)
Attachments
proposed fix
(5.14 KB, patch)
2007-12-13 13:41 PST
,
Alexey Proskuryakov
adele
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2007-12-13 13:41:16 PST
Created
attachment 17879
[details]
proposed fix
Alexey Proskuryakov
Comment 2
2007-12-13 14:18:20 PST
Committed revision 28695.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug