        Reviewed by Adele.

http://bugs.webkit.org/show_bug.cgi?id=16421
        REGRESSION(r28669): Page scrolls down when you hit space key in text area

        Test: fast/events/space-scroll-event.html

        * WebView.cpp:
        (WebView::keyDown):
        (WebView::keyPress):
        Moved space handliing to keyPress() to fix this bug and to match IE. Scrolling via arrow keys is correctly handled
        in keyDown().



Canonical link: https://commits.webkit.org/22560@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@28695 268f45cc-cd09-0410-ab3c-d52691b4dbfc